# exercism.io-cpp

./: .gitignore  README.md
acronym/: .testRun  acronym.cpp  acronym.h
acronym/.exercism/: metadata.json
all-your-base/: .testRun  all_your_base.cpp  all_your_base.h
all-your-base/.exercism/: metadata.json
allergies/: .testRun  allergies.cpp  allergies.h
allergies/.exercism/: metadata.json
anagram/: .testRun  CMakeLists.txt  anagram.cpp  anagram.h  c_cpp_properties.json
anagram/.exercism/: metadata.json
armstrong-numbers/: .testRun  armstrong_numbers.cpp  armstrong_numbers.h  armstrong_numbers_test.cpp
armstrong-numbers/.exercism/: metadata.json
atbash-cipher/: .testRun  atbash_cipher.cpp  atbash_cipher.h  atbash_cipher_test.cpp
atbash-cipher/.exercism/: metadata.json
beer-song/: .testRun  beer_song.cpp  beer_song.h
beer-song/.exercism/: metadata.json
binary/: .testRun  binary.cpp  binary.h  binary_test.cpp
binary-search/: .testRun  binary_search.cpp  binary_search.h
binary-search/.exercism/: metadata.json
binary/.exercism/: metadata.json
bob/: .testRun  bob.cpp  bob.h
bob/.exercism/: metadata.json
circular-buffer/: .testRun  circular_buffer.cpp  circular_buffer.h
circular-buffer/.exercism/: metadata.json
clock/: .testRun  clock.cpp  clock.h
clock/.exercism/: metadata.json
collatz-conjecture/: .testRun  collatz_conjecture.cpp  collatz_conjecture.h  collatz_conjecture_test.cpp
collatz-conjecture/.exercism/: metadata.json
complex-numbers/: .testRun  complex_numbers.cpp  complex_numbers.h
complex-numbers/.exercism/: metadata.json
darts/: .testRun  darts.cpp  darts.h
darts/.exercism/: metadata.json
difference-of-squares/: .testRun  difference_of_squares.cpp  difference_of_squares.h
difference-of-squares/.exercism/: metadata.json
dnd-character/: .testRun  dnd_character.cpp  dnd_character.h
dnd-character/.exercism/: metadata.json
doctor-data/: .testRun  README.md  doctor_data.cpp  doctor_data.h
doctor-data/.exercism/: metadata.json
election-day/: .testRun  election_day.cpp
election-day/.exercism/: metadata.json
eliuds-eggs/: .testRun  eliuds_eggs.h  eliuds_eggs_test.cpp  pop_count.h
eliuds-eggs/.exercism/: metadata.json
ellens-alien-game/: .testRun  ellens_alien_game.cpp
ellens-alien-game/.exercism/: metadata.json
etl/: .testRun  etl.h
etl/.exercism/: metadata.json
freelancer-rates/: .testRun  freelancer_rates.cpp
freelancer-rates/.exercism/: metadata.json
gigasecond/: .testRun  CMakeLists.txt  gigasecond.cpp  gigasecond.h  gigasecond_test.cpp
gigasecond/.exercism/: metadata.json
grade-school/: .testRun  grade_school.cpp  grade_school.h
grade-school/.exercism/: metadata.json
grains/: .testRun  grains.cpp  grains.h
grains/.exercism/: metadata.json
hamming/: .testRun  hamming.cpp  hamming.h  hamming_test.cpp
hamming/.exercism/: metadata.json
hello-world/: .testRun  CMakeCache.txt  hello_world.cpp  hello_world.h  hello_world_test.cpp
hello-world/.exercism/: metadata.json
hexadecimal/: .testRun  hexadecimal.cpp  hexadecimal.h  hexadecimal_test.cpp
hexadecimal/.exercism/: metadata.json
high-scores/: .testRun  high_scores.cpp  high_scores.h  high_scores_test.cpp
high-scores/.exercism/: metadata.json
interest-is-interesting/: .testRun  interest_is_interesting.cpp
interest-is-interesting/.exercism/: metadata.json
isbn-verifier/: .testRun  isbn_verifier.cpp  isbn_verifier.h
isogram/: .testRun  isogram.cpp  isogram.h
kindergarten-garden/: .testRun  kindergarten_garden.cpp  kindergarten_garden.h
lasagna/: .testRun  lasagna.cpp
lasagna-master/: .testRun  README.md  lasagna_master.cpp  lasagna_master.h
last-will/: .testRun  last_will.cpp
leap/: .testRun  leap.cpp  leap.h  leap_test.cpp
log-levels/: .testRun  log_levels.cpp
luhn/: .testRun  luhn.cpp  luhn.h
making-the-grade/: .testRun  making_the_grade.cpp
matching-brackets/: .testRun  matching_brackets.cpp  matching_brackets.h
nth-prime/: .testRun  nth_prime.cpp  nth_prime.h
nucleotide-count/: .testRun  nucleotide_count.cpp  nucleotide_count.h
pacman-rules/: .testRun  pacman_rules.cpp
pangram/: .testRun  pangram.cpp  pangram.h
pascals-triangle/: .testRun  pascals_triangle.cpp  pascals_triangle.h
perfect-numbers/: .testRun  README.md  perfect_numbers.cpp  perfect_numbers.h
pop-count/: .testRun  pop_count.cpp
prime-factors/: .testRun  prime_factors.cpp  prime_factors.h  prime_factors_test.cpp
protein-translation/: .testRun  protein_translation.cpp  protein_translation.h  protein_translation_test.cpp
queen-attack/: .testRun  queen_attack.cpp  queen_attack.h
raindrops/: .testRun  raindrops.cpp  raindrops.h
resistor-color/: .testRun  resistor_color.cpp  resistor_color.h  resistor_color_test.cpp
resistor-color-duo/: .testRun  resistor_color_duo.cpp  resistor_color_duo.h
reverse-string/: .testRun  reverse_string.cpp  reverse_string.h
rna-transcription/: .testRun  rna_transcription.cpp  rna_transcription.h  rna_transcription_test.cpp
robot-name/: .testRun  robot_name.cpp  robot_name.h
roman-numerals/: .testRun  roman_numerals.cpp  roman_numerals.h
rotational-cipher/: .testRun  rotational_cipher.cpp  rotational_cipher.h
run-length-encoding/: .testRun  run_length_encoding.cpp  run_length_encoding.h
scrabble-score/: .testRun  scrabble_score.cpp  scrabble_score.h
secret-handshake/: .testRun  secret_handshake.cpp  secret_handshake.h  secret_handshake_test.cpp
series/: .testRun  series.cpp  series.h  series_test.cpp
sieve/: .testRun  sieve.cpp  sieve.h
space-age/: .testRun  space_age.cpp  space_age.h  space_age_test.cpp
sum-of-multiples/: .testRun  README.md  sum_of_multiples.cpp  sum_of_multiples.h  sum_of_multiples_test.cpp
triangle/: .testRun  triangle.cpp  triangle.h
trinary/: .testRun  trinary.cpp  trinary.h
troll-the-trolls/: .testRun  troll_the_trolls.cpp
two-fer/: .testRun  two_fer.cpp  two_fer.h  two_fer_test.cpp
vehicle-purchase/: .testRun  vehicle_purchase.cpp  vehicle_purchase.h
word-count/: .testRun  word_count.cpp  word_count.h
(+43 files in other folders)
